assembly definition fix; PingObject removed; asset path label fix

--- a/Editor/SergeiLiubich.FavouritesWindow.Editor.asmdef
+++ b/Editor/SergeiLiubich.FavouritesWindow.Editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "sergei_liubich.favourites_window.editor",
-    "rootNamespace": "",
+    "rootNamespace": "SergeiLiubich.FavouritesWindow.Editor",
     "references": [],
     "includePlatforms": [
         "Editor"
